--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>React Course</title>
-    <div id="root"></div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="./app.js">
     
-</script>
+    <title>React Course</title>
+    <div id="root">
+        <h1>This is web</h1>
+    </div>
+    <script type="module" src="./app.js"></script>
 </head>
 <body>
     
