--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="root">
         <h1>This is web</h1>
     </div>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./src/app.js"></script>
 </head>
 <body>
     
